--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     
     <a
     target="_blank"
-     href="https://instagram.com/gabriellaramosp">
+     href="https://instagram.com/moveisparavoce">
       Instagram
     </a>
 
-    <a href="mailto:gabriellapereira.arq@hotmail.com">
+    <a href="mailto:contato@moveisparavoce.com">
       Fale conosco
     </a>
   </div>
